--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 ---
 permalink: /404.html
-layout: default
+layout: home
+title: RubyGems.Guide - 404
 ---
 
 <style type="text/css" media="screen">
